# TxtGame

./: .clangd  .gitignore  CMakeLists.txt  README.md
src/: GameTypes.h  main.cpp
